2009-07-22  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in, libmisc/shell.c, libmisc/setupenv.c, src/newgrp.c,
	src/su.c: Let the system shell be configurable.

2009-07-20  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c, libmisc/shell.c: Added support for shells being a
	shell script without a shebang.

2009-07-19  Jean-Louis Dupond  <info@dupondje.be>

	* po/nl.po: Fix obvious mistake in Dutch translation.

2009-07-18  Peter Vrabec  <pvrabec@redhat.com>

	* NEWS, libmisc/find_new_gid.c, libmisc/find_new_uid.c: Do not use
	getpwent / getgrent for system accounts. Trying the low-IDs with
	getpwuid / getgrgid should be more efficient on LDAP configured
	systems with many accounts.
	* NEWS, libmisc/find_new_gid.c, libmisc/find_new_uid.c: Since
	system accounts are allocated from SYS_?ID_MIN to SYS_?ID_MAX in
	reverse order, accounts are packed close to SYS_?ID_MAX if
	SYS_?ID_MIN is already used but there are still dome gaps.

2009-07-05  Piarres Beobide  <pi+debian@beobide.net>

	* po/eu.po: Updated Basque translation.

2009-06-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/fi/Makefile.am: Stop distributing the Finnish translation of
	passwd.1 (outdated).

2009-06-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/pwck.8.xml: The shadow file is optional.
	* man/pwck.8.xml: Updated description of the checks. Added
	description of the shadow checks.
	* man/pwck.8.xml: Updated description of the checks.

2009-06-12  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fixed typo (forunis)

2009-06-12  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/fputsx.c: Compare the result of fgets() with the provided
	buffer instead of NULL.

2009-06-12  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: Removed limitation on the length of the gshadow
	lines.
	* lib/gshadow.c: Compare the result of fgetsx() with the provided
	buffer instead of NULL.
